# flown

./: .gitignore  .gitmodules  CONTEXT.md  Cargo.toml
crates/agent/: Cargo.toml
crates/agent/examples/: agent.rs
crates/agent/src/: agent.rs  agent_loop.rs  lib.rs  proxy.rs  types.rs
crates/agent/src/harness/: harness.rs  messages.rs  mod.rs  prompt_templates.rs  skills.rs  system_prompt.rs  types.rs
crates/agent/src/harness/compaction/: branch_summary.rs  compaction.rs  mod.rs
crates/agent/src/harness/env/: types.rs
crates/agent/src/harness/session/: jsonl_repo.rs  jsonl_storage.rs  memory_repo.rs  mod.rs  repo_utils.rs  session.rs  storage.rs  types.rs  uuid.rs
crates/agent/src/harness/utils/: mod.rs  shell_output.rs  truncate.rs
crates/agent/tests/: agent_api.rs  harness_api.rs
crates/ai/: Cargo.toml
crates/ai/examples/: anthropic.rs  openai.rs
crates/ai/src/: api_registry.rs  diagnostics.rs  env_api_keys.rs  error.rs  image_models.generated.json  image_models.rs  images.rs  images_api_registry.rs  images_types.rs  json_parse.rs  lib.rs  models.generated.json  models.rs  overflow.rs  session_resources.rs  types.rs  validation.rs
crates/ai/src/providers/: alignment_surface.rs  anthropic.rs  common.rs  faux.rs  json.rs  mod.rs  openai_completions.rs  openai_responses.rs
crates/ai/src/providers/images/: mod.rs  openrouter.rs
crates/ai/tests/: anthropic_provider_tests.rs  api_alignment_tests.rs  faux_provider_tests.rs  images_api_alignment_tests.rs
crates/coding-agent/: Cargo.toml
crates/coding-agent/src/: cli.rs  clipboard.rs  config.rs  interactive_mode.rs  main.rs  native_env.rs  skills.rs  slash_commands.rs  system_prompt.rs
crates/coding-agent/src/core/: mcp.rs  mod.rs  real_fs.rs  session_manager.rs  skills.rs  system_prompt.rs  types.rs
crates/coding-agent/src/core/extensions/: btw.rs  mcp.rs  mod.rs  model.rs  runner.rs  types.rs
crates/coding-agent/src/core/tools/: bash.rs  common.rs  edit.rs  mod.rs  read.rs  write.rs
crates/coding-agent/src/core/workflow/: executor.rs  metadata.rs  mod.rs  runtime.rs  storage.rs
crates/coding-agent/src/tui/: component.rs  conversation.rs  editor.rs  hint_bar.rs  layout.rs  message_block.rs  mod.rs  overlay_stack.rs  runtime.rs  slash_commands.rs  state.rs  status_line.rs  terminal.rs  tool_format.rs  tool_view.rs  transcript.rs  welcome.rs
crates/coding-agent/src/tui/components/: app.rs  editor.rs  entry_view.rs  hint_bar.rs  message_block.rs  mod.rs  model_overlay.rs  overlay_conversation.rs  status_line.rs  transcript.rs
crates/coding-agent/src/tui/markdown/: blocks.rs  fences.rs  latex.rs  links.rs  lists.rs  markers.rs  mermaid.rs  mod.rs  spans.rs  syntax.rs  table_layout.rs  tables.rs  width.rs  wrapping.rs
crates/coding-agent/src/tui/theme/: mod.rs
docs/adr/: 0001-async-extension-context-and-command-proxy.md
docs/superpowers/plans/: 2026-06-18-agent-pi-mono-alignment.md  2026-06-19-model-command.md
docs/superpowers/specs/: 2026-06-17-btw-extension-design.md  2026-06-18-agent-pi-mono-alignment-design.md  2026-06-19-model-command-design.md
