[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "io-util", "sync", "time"] }
futures = "0.3"
flume = "0.12.0"
parking_lot = "0.12"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml_serde = "0.10"
once_cell = "1"

# HTTP
reqwest = { version = "0.13.4", default-features = false, features = ["stream", "json", "rustls"] }
reqwest-eventsource = "0.6"
eventsource-stream = "0.2"
futures-timer = "3"

# Terminal UI
crossterm = "0.29.0"
unicode-width = "0.2"
unicode-segmentation = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Type/schema
schemars = "1.2.1"

# Logging
tracing = { version = "0.1", features = ["release_max_level_off"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
uuid = { version = "1.23.2", features = ["v4", "v7"] }
similar = "3.1.1"


# JavaScript runtime
rquickjs = { version = "0.12.0", features = ["futures"] }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"
